--- a/src/email-templates/forgot-password.ejs
+++ b/src/email-templates/forgot-password.ejs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Healing Tube</title>
+    <title>Insurance Agent Tube</title>
 </head>
 
 <body
@@ -15,7 +15,7 @@
             <tbody>
                 <tr>
                     <td align="start">
-                    <img src="https://www.healing.tube/assets/images/landingpage/Healing-Tube-Logo.png"
+                    <img src="https://www.insuranceagent.tube/assets/images/landingpage/Insurance-Agent-Logo.jpg"
                     alt=""
                        style="text-align: center;
                         width: 430px;
@@ -33,7 +33,7 @@
                 </tr>
                 <tr>
                     <td style="padding-bottom: 20px; font-size: 17px;">We have received a request to set your new  password for your 
-                        Healing.tube account.
+                        Insuranceagent.tube account.
                     </td>
                 </tr>
                 <tr>
@@ -49,13 +49,13 @@
                     </td>
                 </tr> -->
                 <tr>
-                    <td style="padding-bottom: 20px; font-size: 17px;">Healing.tube
+                    <td style="padding-bottom: 20px; font-size: 17px;">Insuranceagent.tube
 
                     </td>
                 </tr>
                 <tr>
                     <td style="padding-bottom: 20px; font-size: 17px;"><a style="color: black;"
-                            href="mailto:info@healing.tube">info@healing.tube </a>
+                            href="mailto:info@insuranceagent.tube">info@insuranceagent.tube </a>
                     </td>
                 </tr>
             </tbody>
